Update .gitignore, .npmignore, bower ignore

--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,17 @@
-node_modules
-bower_components
-components
-.DS_Store
-coverage
-.travis.yml
+.*
 *.log
+build/
+bower_components/
+components/
+coverage/
+node_modules/
+spec/
+build-data.js
+build-supported-tags.js
+tags.js
+bower.json
+component.json
+History.md
+Supported-tags.md
+data/brill.txt
+data/tags.json
