--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test.js",
     "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test.js",
     "lint": "npm run lint-api && npm run lint-test && npm run lint-style",
-    "lint-api": "node_modules/.bin/eslint index.js build-data.js build-supported-tags.js --env node --env browser --rule 'quotes: [2, single]'",
+    "lint-api": "node_modules/.bin/eslint index.js build-data.js build-support.js --env node --env browser --rule 'quotes: [2, single]'",
     "lint-test": "node_modules/.bin/eslint test.js --env node --env mocha --rule 'quotes: [2, single]'",
-    "lint-style": "node_modules/.bin/jscs index.js build-data.js build-supported-tags.js test.js --reporter=inline",
+    "lint-style": "node_modules/.bin/jscs index.js build-data.js build-support.js test.js --reporter=inline",
     "scrape-data": "curl --connect-timeout 15 --max-time 20 -H 'Accept: application/vnd.github.v3.raw' -L https://github.com/mark-watson/fasttag_v2/blob/master/lexicon.txt?raw=true -o data/brill.txt || exit 0",
     "build-data": "node build-data.js",
-    "build-supported-tags": "node build-supported-tags.js",
+    "build-supported-tags": "node build-support.js",
     "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test.js",
     "prepublish": "npm run scrape-data && npm run build-data && npm run build-supported-tags",
     "make": "npm run lint && npm run coverage"
