Move scripts to `script/`

--- a/bower.json
+++ b/bower.json
@@ -32,8 +32,7 @@
     "components/",
     "coverage/",
     "node_modules/",
-    "build-data.js",
-    "build-supported-tags.js",
+    "script/",
     "tags.js",
     "test.js",
     "component.json",
