--- a/.npmignore
+++ b/.npmignore
@@ -5,8 +5,7 @@ bower_components/
 components/
 coverage/
 node_modules/
-build-data.js
-build-supported-tags.js
+script/
 tags.js
 test.js
 bower.json
