--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,25 @@
 language: node_js
-script: npm run-script test-travis
 node_js:
-- '0.10'
 - '0.11'
-after_script: npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls
+- '0.12'
+- '4.0'
+- '5.0'
+- '6.0'
+after_success: bash <(curl -s https://codecov.io/bash)
 deploy:
-  provider: npm
-  email: tituswormer@gmail.com
-  api_key:
-    secure: Db5Q9sFLrHA/9OsLzI5Os3q7fYzEkMLywIk4nncX+6sbrpvApmMJBTrDpvjzUKM1yChbiWKwRlbF2e42tkAtndOj+4eu9DgM8Ua1P6VFPZa4V5xJP2u5qJMArrn8AIs4VUQN9YfvpfqHlZdbpWAp/vF4Tge/k3qV+ezDx2Awz/0=
-  on:
-    repo: wooorm/brill
+  - provider: npm
+    email: tituswormer@gmail.com
+    api_key:
+      secure: Db5Q9sFLrHA/9OsLzI5Os3q7fYzEkMLywIk4nncX+6sbrpvApmMJBTrDpvjzUKM1yChbiWKwRlbF2e42tkAtndOj+4eu9DgM8Ua1P6VFPZa4V5xJP2u5qJMArrn8AIs4VUQN9YfvpfqHlZdbpWAp/vF4Tge/k3qV+ezDx2Awz/0=
+    on:
+      tags: true
+      node: '5.0'
+  - provider: releases
+    api_key:
+      secure: CGGSKkPaN+zTsLMd05tJMfwGF35viy4Lc4+X32wAynR4lvKqNrd0hJJt9aFDpBWCZ4GoIEAoc7C3ssk4JhAPxmzPLH0YhDZqxlGu/giKQw4oBWDtYGspdt7pxNtwEZJSr64itCnfmNhU1rYrf/mMYfOt/pq3oVpqJtUAbCJjONo=
+    file:
+      - "brill.js"
+      - "brill.min.js"
+    on:
+      tags: true
+      node: '6.0'
