--- a/package.json
+++ b/package.json
@@ -13,36 +13,67 @@
     "pos",
     "post"
   ],
-  "dependencies": {
-    "datamap-interface": "^0.3.0"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/wooorm/brill.git"
-  },
-  "author": "Titus Wormer <tituswormer@gmail.com>",
+  "files": [
+    "lib/",
+    "index.js"
+  ],
+  "repository": "https://github.com/wooorm/brill",
+  "bugs": "https://github.com/wooorm/brill/issues",
+  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "contributors": [
+    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+  ],
+  "dependencies": {},
   "devDependencies": {
-    "eslint": "^0.9.0",
-    "istanbul": "^0.3.0",
-    "jscs": "^1.0.0",
-    "markdown-table": "^0.1.0",
-    "mocha": "^2.0.0",
-    "plain-text-data-to-json": "^0.1.0"
+    "bail": "^1.0.1",
+    "browserify": "^13.0.1",
+    "concat-stream": "^1.5.1",
+    "esmangle": "^1.0.1",
+    "follow-redirects": "^0.2.0",
+    "has": "^1.0.1",
+    "nyc": "^7.0.0",
+    "plain-text-data-to-json": "^1.0.0",
+    "remark-cli": "^1.0.0",
+    "remark-comment-config": "^4.0.0",
+    "remark-github": "^5.0.0",
+    "remark-lint": "^4.0.0",
+    "remark-validate-links": "^4.0.0",
+    "tape": "^4.0.0",
+    "xo": "^0.16.0"
   },
   "scripts": {
-    "test": "node_modules/.bin/_mocha --reporter spec --check-leaks -u exports test.js",
-    "test-travis": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --reporter spec --check-leaks -u exports test.js",
-    "coverage": "node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- -- test.js",
-    "lint-api": "node_modules/.bin/eslint index.js",
-    "lint-test": "node_modules/.bin/eslint test.js --env mocha",
-    "lint-script": "node_modules/.bin/eslint script/build-data.js script/build-support.js",
-    "lint-style": "node_modules/.bin/jscs index.js script/build-data.js script/build-support.js test.js --reporter=inline",
-    "lint": "npm run lint-api && npm run lint-test && npm run lint-script && npm run lint-style",
-    "make": "npm run lint && npm run coverage",
-    "scrape-data": "curl --connect-timeout 15 --max-time 20 -H 'Accept: application/vnd.github.v3.raw' -L https://github.com/mark-watson/fasttag_v2/blob/master/lexicon.txt?raw=true -o data/brill.txt || exit 0",
-    "build-data": "node script/build-data.js",
-    "build-support": "node script/build-support.js",
-    "build": "npm run scrape-data && npm run build-data && npm run build-support",
-    "prepublish": "npm run build"
+    "build-md": "remark . --quiet --frail",
+    "build-generate": "node script/generate.js",
+    "build-bundle": "browserify index.js --bare -s brill > brill.js",
+    "build-mangle": "esmangle brill.js > brill.min.js",
+    "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
+    "lint": "xo",
+    "test-api": "node test",
+    "test-coverage": "nyc --reporter lcov tape test.js",
+    "test": "npm run build && npm run lint && npm run test-coverage"
+  },
+  "xo": {
+    "space": true,
+    "rules": {
+      "guard-for-in": "off"
+    },
+    "ignores": [
+      "brill.js",
+      "brill.min.js"
+    ]
+  },
+  "remarkConfig": {
+    "output": true,
+    "plugins": {
+      "comment-config": null,
+      "github": null,
+      "lint": {
+        "list-item-spacing": false
+      },
+      "validate-links": null
+    },
+    "settings": {
+      "bullet": "*"
+    }
   }
 }
