--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "has": "^1.0.1",
     "nyc": "^10.0.0",
     "plain-text-data-to-json": "^1.0.0",
-    "remark-cli": "^2.0.0",
-    "remark-preset-wooorm": "^1.0.0",
+    "remark-cli": "^3.0.0",
+    "remark-preset-wooorm": "^2.0.0",
     "tape": "^4.0.0",
     "xo": "^0.17.0"
   },
   "scripts": {
-    "build-md": "remark . --quiet --frail",
+    "build-md": "remark . -qfo",
     "build-generate": "node script/generate.js",
     "build-bundle": "browserify index.js --bare -s brill > brill.js",
     "build-mangle": "esmangle brill.js > brill.min.js",
@@ -59,7 +59,6 @@
     ]
   },
   "remarkConfig": {
-    "output": true,
-    "presets": "wooorm"
+    "plugins": ["preset-wooorm"]
   }
 }
