--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   ],
   "repository": "words/brill",
   "bugs": "https://github.com/words/brill/issues",
-  "author": "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)",
+  "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
-    "Titus Wormer <tituswormer@gmail.com> (http://wooorm.com)"
+    "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
   "dependencies": {},
   "devDependencies": {
