--- a/package.json
+++ b/package.json
@@ -26,17 +26,16 @@
   "dependencies": {},
   "devDependencies": {
     "bail": "^1.0.1",
-    "browserify": "^14.0.0",
-    "concat-stream": "^1.5.1",
+    "browserify": "^16.0.0",
+    "concat-stream": "^2.0.0",
     "esmangle": "^1.0.1",
     "follow-redirects": "^1.0.0",
-    "has": "^1.0.1",
-    "nyc": "^11.0.0",
+    "nyc": "^14.0.0",
     "plain-text-data-to-json": "^1.0.0",
-    "remark-cli": "^4.0.0",
-    "remark-preset-wooorm": "^3.0.0",
+    "remark-cli": "^6.0.0",
+    "remark-preset-wooorm": "^5.0.0",
     "tape": "^4.0.0",
-    "xo": "^0.18.0"
+    "xo": "^0.24.0"
   },
   "scripts": {
     "build-md": "remark . -qfo",
@@ -60,6 +59,8 @@
     ]
   },
   "remarkConfig": {
-    "plugins": ["preset-wooorm"]
+    "plugins": [
+      "preset-wooorm"
+    ]
   }
 }
