--- a/package.json
+++ b/package.json
@@ -32,24 +32,32 @@
     "follow-redirects": "^1.0.0",
     "nyc": "^14.0.0",
     "plain-text-data-to-json": "^1.0.0",
+    "prettier": "^1.17.1",
     "remark-cli": "^6.0.0",
     "remark-preset-wooorm": "^5.0.0",
     "tape": "^4.0.0",
     "xo": "^0.24.0"
   },
   "scripts": {
-    "build-md": "remark . -qfo",
-    "build-generate": "node script/generate.js",
+    "generate": "node script/generate.js",
+    "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
     "build-bundle": "browserify index.js --bare -s brill > brill.js",
     "build-mangle": "esmangle brill.js > brill.min.js",
-    "build": "npm run build-md && npm run build-bundle && npm run build-mangle",
-    "lint": "xo",
+    "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test.js",
-    "test": "npm run build && npm run lint && npm run test-coverage"
+    "test": "npm run format && npm run build && npm run test-coverage"
+  },
+  "prettier": {
+    "tabWidth": 2,
+    "useTabs": false,
+    "singleQuote": true,
+    "bracketSpacing": false,
+    "semi": false,
+    "trailingComma": "none"
   },
   "xo": {
-    "space": true,
+    "prettier": true,
     "esnext": false,
     "rules": {
       "guard-for-in": "off"
