--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "bail": "^1.0.1",
     "browserify": "^16.0.0",
     "concat-stream": "^2.0.0",
-    "esmangle": "^1.0.1",
     "follow-redirects": "^1.0.0",
     "nyc": "^14.0.0",
     "plain-text-data-to-json": "^1.0.0",
@@ -36,13 +35,14 @@
     "remark-cli": "^6.0.0",
     "remark-preset-wooorm": "^5.0.0",
     "tape": "^4.0.0",
+    "tinyify": "^2.5.0",
     "xo": "^0.24.0"
   },
   "scripts": {
     "generate": "node script/generate.js",
     "format": "remark . -qfo && prettier --write \"**/*.js\" && xo --fix",
-    "build-bundle": "browserify index.js --bare -s brill > brill.js",
-    "build-mangle": "esmangle brill.js > brill.min.js",
+    "build-bundle": "browserify . -s brill -o brill.js",
+    "build-mangle": "browserify . -s brill -p tinyify -o brill.min.js",
     "build": "npm run build-bundle && npm run build-mangle",
     "test-api": "node test",
     "test-coverage": "nyc --reporter lcov tape test.js",
