Add `funding` field to `package.json`

--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   ],
   "repository": "words/brill",
   "bugs": "https://github.com/words/brill/issues",
+  "funding": {
+    "type": "github",
+    "url": "https://github.com/sponsors/wooorm"
+  },
   "author": "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)",
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
