--- a/package.json
+++ b/package.json
@@ -23,33 +23,31 @@
   "contributors": [
     "Titus Wormer <tituswormer@gmail.com> (https://wooorm.com)"
   ],
+  "sideEffects": false,
+  "type": "module",
+  "main": "index.js",
   "files": [
     "lib/",
     "index.js"
   ],
   "devDependencies": {
-    "bail": "^1.0.0",
-    "browserify": "^17.0.0",
+    "bail": "^2.0.0",
+    "c8": "^7.0.0",
     "concat-stream": "^2.0.0",
     "follow-redirects": "^1.0.0",
-    "nyc": "^15.0.0",
-    "plain-text-data-to-json": "^1.0.0",
+    "plain-text-data-to-json": "^2.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^9.0.0",
     "remark-preset-wooorm": "^8.0.0",
     "tape": "^5.0.0",
-    "tinyify": "^3.0.0",
     "xo": "^0.38.0"
   },
   "scripts": {
     "generate": "node build.js",
     "format": "remark . -qfo && prettier . -w --loglevel warn && xo --fix",
-    "build-bundle": "browserify . -s brill -o brill.js",
-    "build-mangle": "browserify . -s brill -p tinyify -o brill.min.js",
-    "build": "npm run build-bundle && npm run build-mangle",
-    "test-api": "node test",
-    "test-coverage": "nyc --reporter lcov tape test.js",
-    "test": "npm run format && npm run build && npm run test-coverage"
+    "test-api": "node test.js",
+    "test-coverage": "c8 --check-coverage --branches 100 --functions 100 --lines 100 --statements 100 --reporter lcov node test.js",
+    "test": "npm run format && npm run test-coverage"
   },
   "prettier": {
     "tabWidth": 2,
@@ -61,13 +59,12 @@
   },
   "xo": {
     "prettier": true,
-    "esnext": false,
     "rules": {
-      "guard-for-in": "off"
-    },
-    "ignores": [
-      "brill.js"
-    ]
+      "import/no-mutable-exports": "off",
+      "guard-for-in": "off",
+      "no-var": "off",
+      "prefer-arrow-callback": "off"
+    }
   },
   "remarkConfig": {
     "plugins": [
