--- a/package.json
+++ b/package.json
@@ -33,13 +33,9 @@
     "index.js"
   ],
   "devDependencies": {
-    "@types/concat-stream": "^2.0.0",
-    "@types/follow-redirects": "^1.0.0",
     "@types/node": "^18.0.0",
-    "bail": "^2.0.0",
     "c8": "^7.0.0",
-    "concat-stream": "^2.0.0",
-    "follow-redirects": "^1.0.0",
+    "node-fetch": "^3.0.0",
     "plain-text-data-to-json": "^2.0.0",
     "prettier": "^2.0.0",
     "remark-cli": "^11.0.0",
